feat: Member can have multiple title
